Register and Login debugged
